[FIX] Gateways table xs view: Connect btn spacing
Add more spacing above and below Connect Gateway button on mobile.

--- a/src/less/ripple/tabs/trust.less
+++ b/src/less/ripple/tabs/trust.less
@@ -1,5 +1,8 @@
 #t-trust {
   @media (max-width: @screen-xs-max) {
+    .btn-add-trust {
+      margin: 20px 0;
+    }
     input[type="radio"], input[type="checkbox"] {
       margin: 2px 0 0;
     }
